attached_assets/Pasted--VITE-v5-4-10-ready-in-4004-ms-Local-http-localhost-5000-Network-http-172-1745831789805.txt

  VITE v5.4.10  ready in 4004 ms

  ➜  Local:   http://localhost:5000/
  ➜  Network: http://172.31.128.97:5000/
  ➜  press h + enter to show help
Browserslist: browsers data (caniuse-lite) is 6 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme
Error processing file src/pages/Dashboard.tsx: 357 |     if (oldReasonCodes[reasonCode]) {
358 |       reasonCode = oldReasonCodes[reasonCode];
359 |     }
360 |   }
361 |   return function constructor(loc, details) {
362 |     const error = new SyntaxError();
                        ^
SyntaxError: 
 reasonCode: "MissingClosingTagElement",
        loc: Position {
  line: 245,
  column: 12,
  index: 8999,
},
        pos: 8999,
 syntaxPlugin: "jsx",
       code: "BABEL_PARSER_SYNTAX_ERROR"

      at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:362:19)
      at raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3259:19)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6774:16)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10592:23)
      at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10577:21)
      at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10557:23)
      at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10416:23)

9:16:08 AM [vite] Pre-transform error:   × Unexpected token `div`. Expected jsx identifier
     ╭─[/home/runner/workspace/src/pages/Dashboard.tsx:100:1]
  97 │   };
  98 │   
  99 │   return (
 100 │     <div className="space-y-6">
     ·      ───
 101 │       <div className="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
 102 │         <div>
 103 │           <h1 className="text-3xl font-bold text-eco-dark-green">
     ╰────


Caused by:
    Syntax Error
Error processing file src/pages/Dashboard.tsx: 357 |     if (oldReasonCodes[reasonCode]) {
358 |       reasonCode = oldReasonCodes[reasonCode];
359 |     }
360 |   }
361 |   return function constructor(loc, details) {
362 |     const error = new SyntaxError();
                        ^
SyntaxError: 
 reasonCode: "MissingClosingTagElement",
        loc: Position {
  line: 245,
  column: 12,
  index: 8999,
},
        pos: 8999,
 syntaxPlugin: "jsx",
       code: "BABEL_PARSER_SYNTAX_ERROR"

      at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:362:19)
      at raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3259:19)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6774:16)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10592:23)
      at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10577:21)
      at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10557:23)
      at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10416:23)

9:16:09 AM [vite] Internal server error:   × Unexpected token `div`. Expected jsx identifier
     ╭─[/home/runner/workspace/src/pages/Dashboard.tsx:100:1]
  97 │   };
  98 │   
  99 │   return (
 100 │     <div className="space-y-6">
     ·      ───
 101 │       <div className="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
 102 │         <div>
 103 │           <h1 className="text-3xl font-bold text-eco-dark-green">
     ╰────


Caused by:
    Syntax Error
  Plugin: vite:react-swc
  File: /home/runner/workspace/src/pages/Dashboard.tsx:100:1
Error processing file src/pages/Dashboard.tsx: 357 |     if (oldReasonCodes[reasonCode]) {
358 |       reasonCode = oldReasonCodes[reasonCode];
359 |     }
360 |   }
361 |   return function constructor(loc, details) {
362 |     const error = new SyntaxError();
                        ^
SyntaxError: 
 reasonCode: "MissingClosingTagElement",
        loc: Position {
  line: 245,
  column: 12,
  index: 8999,
},
        pos: 8999,
 syntaxPlugin: "jsx",
       code: "BABEL_PARSER_SYNTAX_ERROR"

      at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:362:19)
      at raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3259:19)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6774:16)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at jsxParseElementAt (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6745:32)
      at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10592:23)
      at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10577:21)
      at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10557:23)
      at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:10416:23)

9:16:09 AM [vite] Internal server error:   × Unexpected token `div`. Expected jsx identifier
     ╭─[/home/runner/workspace/src/pages/Dashboard.tsx:100:1]
  97 │   };
  98 │   
  99 │   return (
 100 │     <div className="space-y-6">
     ·      ───
 101 │       <div className="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
 102 │         <div>
 103 │           <h1 className="text-3xl font-bold text-eco-dark-green">
     ╰────


Caused by:
    Syntax Error
  Plugin: vite:react-swc
  File: /home/runner/workspace/src/pages/Dashboard.tsx:100:1 (x2)